# PROJET_FINAL

./: ANSWERS.md  DESIGN.md  LOG.md  README.md  coins.py  commandes.py  create_world.py  endgame.py  gameover.py  gameview.py  gates.py  main.py  matrix.py  mauvais readmap.py  measure_times.py  monsters.py  player.py  profile.prof  pyproject.toml  readmap.py  slimes.py  switches.py  user_interface.py  weapons.py
Documentation/: ANSWERS.md  DESIGN.md  LOG.md  README.md
Map_Create/: create_world.py  platforms.py  world_sprites.py
alt_game_views/: endgame.py  gameover.py
maps/: enemies_1.txt  enemies_10.txt  enemies_100.txt  enemies_1000.txt  enemies_3.txt  enemies_5.txt  enemies_50.txt  enemies_500.txt  map1.txt  map2.txt  map3.txt  platforms_1.txt  platforms_10.txt  platforms_100.txt  platforms_1000.txt  platforms_3.txt  platforms_5.txt  platforms_50.txt  platforms_500.txt  test_duplicated_platforms.txt  test_invalid_characters.txt  test_invalid_config.txt  test_invalid_dimensions.txt  test_invalid_end.txt  test_invalid_platform.txt  test_valid_platform.txt
platforming/: block_detecting.py  platforms.py
tests/: conftest.py  test_essai.py  test_map.py  test_monsters.py  test_platforms.py  test_player.py  test_switches_gates.py  test_weapons.py
world_sprites_types/: checkpoint.py  coins.py  exit.py  gates.py  lava.py  switches.py
