[project]
name = "projet-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.1.0",
    "numpy>=2.2.5",
    "pyyaml>=6.0.2",
]
[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "snakeviz>=2.2.2",
]
